--- a/css/header.css
+++ b/css/header.css
@@ -1,11 +1,13 @@
 #header {
+  position: fixed;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   background-color: #fff200;  /* Yellow */
   background-image: linear-gradient(yellow, #fff200);
-  height: 100%;
+  height: 200px;
+  width: 100%;
 }
 
 #header_logo {
